fixed z-index

--- a/src/components/search.css
+++ b/src/components/search.css
@@ -15,6 +15,7 @@
 
   & .pagefind-ui__search-clear {
     background: none;
+    z-index: 2;
   }
 
   & .pagefind-ui__drawer {
